--- a/src/WelcomeMessage.css
+++ b/src/WelcomeMessage.css
@@ -135,7 +135,7 @@ input:checked + .slider:before {
     }
 
     .welcome-message {
-        margin-top: 0%;
+        margin-top: 5%;
         width: 86%;
     }
 
